[ticket/12911] Fix topic icons z-index
PHPBB3-12911

--- a/phpBB/styles/prosilver/theme/imageset.css
+++ b/phpBB/styles/prosilver/theme/imageset.css
@@ -134,6 +134,7 @@
     position: absolute;
     left: 4px;
     top: 16px;
+    z-index: 3;
 }
 
 /* Former imageset */
